# comfystream

./: .gitignore  COMFY_LOADER_README.md  PROCESSPOOL_TRICKLE_INTEGRATION.md  TRICKLE_INTEGRATION.md  example_enhanced_stream_start.py  example_processpool_trickle.py  example_prompt_worker.py  install.py  pyproject.toml  requirements.txt  setup_comfyui_data.py  test_comfy_loader.py  test_workspace_config.py
.devcontainer/: Dockerfile  Dockerfile.base  README.md  devcontainer.json
.github/workflows/: opencv-docker.yml  opencv.yaml  release.yaml
docker/: Dockerfile.base  Dockerfile.opencv  entrypoint.sh  livepeer.dockerfile  supervisord.conf
examples/: basic_trickle_integration.py
scripts/: requirements.txt
server/: app.py  mcp_server.py  start_mcp_server.sh  trickle_api.py  trickle_integration.py  trickle_integration_fallback.py
src/comfystream/: __init__.py  client.py  frame_proxy.py  pipeline.py  processpool_pipeline.py  prompt_worker_client.py  prompt_worker_pipeline.py  prompts.py
src/comfystream/scripts/: constraints.txt  requirements.txt
src/comfystream/server/trickle/: __init__.py
ui/: next.config.ts  package-lock.json  package.json
workflow-files/: opencv-cuda-build.yaml
