[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-test"
description = ""
version = "0.0.2"
license = { file = "LICENSE" }
dependencies = [
    "asyncio",
    "comfyui @ git+https://github.com/hiddenswitch/ComfyUI.git@ce3583ad42c024b8f060d0002cbe20c265da6dc8",
    "toml",
    "aiortc",
    "aiohttp",
    "twilio",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/eliteprox/comfystream"

[tool.comfy]
PublisherId = "eliteprox"
DisplayName = "cs-test"
Icon = "https://avatars.githubusercontent.com/u/25355022?s=48&v=4" # SVG, PNG, JPG or GIF (MAX. 800x400px)

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src", "nodes"]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
